Switch to Junit 5, Switch to Java 14 syntax, fix bug with updating of file location on thumbnail description